--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,19 @@ if (UNIX)
 	include(CheckIncludeFileCXX)
 	include(CheckSymbolExists)
 	include(CheckCSourceCompiles)
+	include(CheckCxxCompilerFlag)
+
+	check_cxx_compiler_flag(-Werror HAVE_ERROR)
+	check_cxx_compiler_flag(-Wno-unused-local-typedef HAVE_NO_UNUSED_LOCAL_TYPEDEF)
+
+	# warnings as errors:
+	# we have a problem with people checking in code with warnings.
+	if (HAVE_ERROR)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
+	endif()
+	if (HAVE_NO_UNUSED_LOCAL_TYPEDEF)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-local-typedef")
+	endif()
 
 	check_include_file_cxx(istream HAVE_ISTREAM)
 	check_include_file_cxx(ostream HAVE_OSTREAM)
